--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
+    "@expo/vector-icons": "expo/vector-icons",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@starodubenko/react-native-card-stack-swiper": "^1.4.0",
+    "expo": "~50.0.17",
     "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
+    "react-native-vector-icons": "^10.0.3",
     "react-router-native": "^6.22.3"
   },
   "devDependencies": {
