--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "expo/vector-icons",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "@starodubenko/react-native-card-stack-swiper": "^1.4.0",
-    "expo": "~50.0.17",
-    "expo-linear-gradient": "^12.7.2",
-    "expo-status-bar": "~1.11.1",
+    "axios": "^1.7.2",
+    "expo": "^51.0.0",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native": "0.74.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-vector-icons": "^10.0.3",
     "react-router-native": "^6.22.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
