--- a/Job-Match/package.json
+++ b/Job-Match/package.json
@@ -15,7 +15,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@starodubenko/react-native-card-stack-swiper": "^1.4.0",
     "axios": "^1.7.2",
-    "expo": "^51.0.0",
+    "expo": "~51.0.9",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
